# FaceAlignmentForAndroid

./: .gitignore  .project  README.md  build.gradle  native-lib.cpp
FaceAlignmentForAndroid/: FaceTracker.cpp  FaceTracker.h  LBFRegressor.h  RandomForest.cpp
app/: .gitignore  CMakeLists.txt  build.gradle
app/src/androidTest/java/zeng/com/opencv_test03/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: FaceDetect-lib.cpp  ImageUtils-lib.cpp  native-lib.cpp
app/src/main/cpp/FaceAlignmentForAndroid/: CMakeLists.txt  FaceShape.h  FaceTracker.cpp  FaceTracker.h  LBF.h  LBFRegressor.cpp  Tree.cpp  Utils.cpp
app/src/main/cpp/ImageUtils/: rgb2yuv.h  yuv2rgb.h
app/src/main/cpp1/: native-lib.cpp
app/src/main/java/zeng/com/opencv_test03/: AutoFitTextureView.java  CameraActivity.java  CameraConnectionFragment.java  FaceDetect.java  FileUtils.java  FloatingCameraWindow.java  ImageUtils.java  MainActivity.java  OnGetImageListener.java  TrasparentTitleView.java
app/src/main/res/layout/: activity_camera.xml  activity_main.xml  cam_window_view.xml  camera_connection_fragment.xml
app/src/main/res/values/: strings.xml
app/src/test/java/zeng/com/opencv_test03/: ExampleUnitTest.java
dlib-19.7/dlib/: CMakeLists.txt  serialize.h
dlib-19.7/dlib/geometry/: rectangle.h
gradle/wrapper/: gradle-wrapper.properties
